@@ -1,3 +1,8 @@
+2006-03-29  Assaf Gordon  <agordon88@gmail.com>
+
+	* src/gnome-cmd-main-win.c:
+	Fixed bug #309877 (strange atrifacts with horizontal scrolling)
+
 2006-03-28  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/useractions.c:
